src/objects/Sync_Queue__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sync Queues</relationshipLabel>
        <relationshipName>Sync_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Create</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Debt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Debt</label>
        <referenceTo>Additional_Debt__c</referenceTo>
        <relationshipLabel>Sync Queues</relationshipLabel>
        <relationshipName>Sync_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CampaignMember__c</fullName>
        <label>CampaignMember</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Sync Queues</relationshipLabel>
        <relationshipName>Sync_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Sync Queues</relationshipLabel>
        <relationshipName>Sync_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission_Incentive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commission/Incentive</label>
        <referenceTo>Reward__c</referenceTo>
        <relationshipLabel>Sync Queues</relationshipLabel>
        <relationshipName>Sync_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sync Queues</relationshipLabel>
        <relationshipName>Sync_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Assessment</label>
        <referenceTo>Credit_Assessment__c</referenceTo>
        <relationshipLabel>Sync Queues</relationshipLabel>
        <relationshipName>Sync_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DWH_Data_Type__c</fullName>
        <label>DWH Data Type</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ODG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Product Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commission/Incentive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Ledger</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Sync Queues</relationshipLabel>
        <relationshipName>Sync_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Ledger</label>
        <referenceTo>Loan_Ledger__c</referenceTo>
        <relationshipLabel>Sync Queues</relationshipLabel>
        <relationshipName>Sync_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Management_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Management Event</label>
        <referenceTo>Loan_Management_Event__c</referenceTo>
        <relationshipLabel>Sync Queues</relationshipLabel>
        <relationshipName>Sync_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Management</label>
        <referenceTo>Loan_Management__c</referenceTo>
        <relationshipLabel>Sync Queues</relationshipLabel>
        <relationshipName>Sync_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ODG__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner/Director/Guarantor</label>
        <referenceTo>Guarantors__c</referenceTo>
        <relationshipLabel>Sync Queues</relationshipLabel>
        <relationshipName>Sync_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operation</label>
        <referenceTo>Operation__c</referenceTo>
        <relationshipLabel>Sync Queues</relationshipLabel>
        <relationshipName>Sync_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sync Queues</relationshipLabel>
        <relationshipName>Sync_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sync Queues</relationshipLabel>
        <relationshipName>Sync_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Product_ASO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Product ASO</label>
        <referenceTo>Program_Product_ASO__c</referenceTo>
        <relationshipLabel>Sync Queues</relationshipLabel>
        <relationshipName>Sync_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Sync Queues</relationshipLabel>
        <relationshipName>Sync_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Queued_Record_ID__c</fullName>
        <label>Queued Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reward</label>
        <referenceTo>Reward__c</referenceTo>
        <relationshipLabel>Sync Queues (Reward)</relationshipLabel>
        <relationshipName>Sync_Queues1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sync_Status__c</fullName>
        <label>Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Id__c</fullName>
        <label>Task Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sync_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sync Queue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SQ-{0000}</displayFormat>
        <label>Sync Queue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>